--- a/index.html
+++ b/index.html
@@ -9,6 +9,65 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div id="piano">
+        <div id="piano-container" class="keys">
+            <li>
+                <div class="white key" data-key="65" data-note="C"></div>
+                <div class="black key sharp" data-key="87" data-note="C#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="83" data-note="D"></div>
+                <div class="black key sharp" data-key="69" data-note="D#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="68" data-note="E"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="70" data-note="F"></div>
+                <div class="black key sharp" data-key="84" data-note="F#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="71" data-note="G"></div>
+                <div class="black key sharp" data-key="89" data-note="G#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="72" data-note="A"></div>
+                <div class="black key sharp" data-key="85" data-note="A#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="74" data-note="B"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="75" data-note="C"></div>
+                <div class="black key sharp" data-key="79" data-note="C#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="76" data-note="D"></div>
+                <div class="black key sharp" data-key="80" data-note="D#"></div>
+            </li>
+            <li>
+                <div class="white key" data-key="186" data-note="E"></div>
+            </li>
+        </div>
+    </div>
+    <section class="audios">
+        <audio data-key="65" src=""></audio>
+        <audio data-key="87" src=""></audio>
+        <audio data-key="83" src=""></audio>
+        <audio data-key="69" src=""></audio>
+        <audio data-key="68" src=""></audio>
+        <audio data-key="70" src=""></audio>
+        <audio data-key="84" src=""></audio>
+        <audio data-key="71" src=""></audio>
+        <audio data-key="89" src=""></audio>
+        <audio data-key="72" src=""></audio>
+        <audio data-key="85" src=""></audio>
+        <audio data-key="74" src=""></audio>
+        <audio data-key="75" src=""></audio>
+        <audio data-key="79" src=""></audio>
+        <audio data-key="76" src=""></audio>
+        <audio data-key="80" src=""></audio>
+        <audio data-key="186" src=""></audio>
+    </section>
 </body>
 </html>
